--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Srivatsa Joshi</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://rjshkhr.github.io/cleanfolio-minimal" class="link"
-          >RS.</a
+        <a href="https://srivatsajoshi.com" class="link"
+          >SJ</a
         >
       </h3>
 
@@ -55,14 +55,12 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h1>Hi, I am <span class="about__name">Srivatsa Joshi.</span></h1>
+        <h2 class="about__role">DevOps Engineer</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          I'm currently in my final year of bachlors' in Engneering in the feild of Electronics and Computer Engineering.
+          Over the years, I've become interested in areas such as Cybersecurity and DevOps.
+
         </p>
 
         <div class="about__contact center">
@@ -71,7 +69,7 @@
           </a>
 
           <a
-            href="https://github.com/rjshkhr"
+            href="https://github.com/SrivatsaSJoshi"
             aria-label="github"
             class="link link--icon"
           >
@@ -79,7 +77,7 @@
           </a>
 
           <a
-            href="https://linkedin.com/in/rjshkhr"
+            href="https://www.linkedin.com/in/srivatsa-s-joshi-673461231/"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -94,11 +92,9 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>Homelab</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              I have built a homelab from the ground up using technologies such as Proxmox
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">SASS</li>
