Add personal details, extra sections, and resume

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://srivatsajoshi.com" class="link"
-          >SJ</a
-        >
+        <a href="https://srivatsajoshi.com" class="link">SJ</a>
       </h3>
 
       <nav class="nav center">
@@ -32,6 +30,15 @@
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#skills">Skills</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#education">Education</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#experience">Experience</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#certifications">Certifications</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#contact">Contact</a>
@@ -56,15 +63,13 @@
       <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name">Srivatsa Joshi.</span></h1>
-        <h2 class="about__role">DevOps Engineer</h2>
+        <h2 class="about__role">A Computer Science and Cybersecurity Enthusiast.</h2>
         <p class="about__desc">
-          I'm currently in my final year of bachlors' in Engneering in the feild of Electronics and Computer Engineering.
-          Over the years, I've become interested in areas such as Cybersecurity and DevOps.
-
+          Passionate about exploring and implementing innovative solutions in the field of computer science and cybersecurity.
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a href="https://srivatsajoshi.com/Resume.pdf">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -77,7 +82,7 @@
           </a>
 
           <a
-            href="https://www.linkedin.com/in/srivatsa-s-joshi-673461231/"
+            href="https://linkedin.com/in/srivatsa-s-joshi-673461231/"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -94,86 +99,102 @@
           <div class="project">
             <h3>Homelab</h3>
             <p class="project__description">
-              I have built a homelab from the ground up using technologies such as Proxmox
+              A server built at home using Proxmox to explore and experiment with various virtual machines and container technologies.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Proxmox</li>
+              <li class="project__stack-item">Linux</li>
+              <li class="project__stack-item">Networking</li>
             </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Custom Large Language Models</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Utilizing open-source language models to automate daily tasks without any data leaving the device.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Python</li>
+              <li class="project__stack-item">Machine Learning</li>
+              <li class="project__stack-item">NLP</li>
             </ul>
+          </div>
+        </div>
+      </section>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+      <!-- Education -->
+      <section id="education" class="section education">
+        <h2 class="section__title">Education</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Sri Vani Public School, Bengaluru</h3>
+            <p class="project__description">
+              10th Standard, 2011-2019 - 91.6%
+            </p>
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>Jain College, Bengaluru</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              12th Standard, 2020-2021 - 93.6%
             </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
+          </div>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+          <div class="project">
+            <h3>Vellore Institute of Technology, Chennai</h3>
+            <p class="project__description">
+              Bachelor's in Engineering, 2021-2025 - CGPA 9.11
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Experience -->
+      <section id="experience" class="section experience">
+        <h2 class="section__title">Experience</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Linux Club</h3>
+            <p class="project__description">
+              Member of the Technical Department, 2022-present
+            </p>
+          </div>
+
+          <div class="project">
+            <h3>CAIR Lab (DRDO), Bengaluru</h3>
+            <p class="project__description">
+              Anomaly Detection Project, 2023-present
+            </p>
+          </div>
+
+          <div class="project">
+            <h3>DIAT, Pune</h3>
+            <p class="project__description">
+              Malware Analysis and Categorization Internship 2023
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Certifications -->
+      <section id="certifications" class="section certifications">
+        <h2 class="section__title">Certifications</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Ethical Hacking</h3>
+            <p class="project__description">
+              Certified by NPTEL, 2023
+            </p>
+          </div>
+
+          <div class="project">
+            <h3>AWS Cloud Practitioner</h3>
+            <p class="project__description">
+              Certified by AWS, 2024
+            </p>
           </div>
         </div>
       </section>
@@ -182,25 +203,21 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">Linux</li>
+          <li class="skills__list-item btn btn--plain">Networking</li>
+          <li class="skills__list-item btn btn--plain">Machine Learning</li>
+          <li class="skills__list-item btn btn--plain">NLP</li>
+          <li class="skills__list-item btn btn--plain">Cybersecurity</li>
+          <li class="skills__list-item btn btn--plain">Ethical Hacking</li>
+          <li class="skills__list-item btn btn--plain">AWS Cloud</li>
         </ul>
       </section>
 
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
+        <a href="mailto:srivatsasjoshi@gmail.com">
           <span class="btn btn--outline">Email me</span>
         </a>
       </section>
@@ -211,18 +228,18 @@
         href="https://github.com/rjshkhr/cleanfolio-minimal"
         class="link footer__link"
       >
-        Created By Raj Shekhar
+        This website was built from an initial template provided by Raj Shekhar
       </a>
     </footer>
 
     <div class="scroll-container">
       <div class="scroll-top">
         <a aria-label="Scroll up" href="#top">
-          <i aria-hidden="true" class="fas fa-arrow-up"></i>
+          <i class="fas fa-arrow-up"></i>
         </a>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
