--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
       <nav class="nav center">
         <ul class="nav__list center">
+          <li><a href="https://blog.srivatsajoshi.com" class="link link--nav">Blog</a></li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#projects">Projects</a>
           </li>
