--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Srivatsa Joshi</title>
+    <meta name="description" content="Portfolio of Srivatsa Joshi, a Computer Science and Cybersecurity enthusiast. Explore projects, skills, and experience in software development and cybersecurity.">
+    <meta name="keywords" content="Srivatsa Joshi, Computer Science, Cybersecurity, Software Development, Portfolio">
+    <link rel="canonical" href="https://srivatsajoshi.com">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio" />
@@ -19,9 +25,9 @@
   </head>
   <body class="light" id="top">
     <header class="header center">
-      <h3>
+      <h2>
         <a href="https://srivatsajoshi.com" class="link">SJ</a>
-      </h3>
+      </h2>
 
       <nav class="nav center">
         <ul class="nav__list center">
